# oop-playground

./: .gitignore  CMakeLists.txt  README.md  course_intro_example.cpp  pluggable_grading_policies.cpp
1d_heat/: SmartBC1D.cpp
2d_heat/: heat_plot.py
bench/2d_heat/: heat_plot.py
examples/2d_heat/: 2d_heat_output.csv  heat_plot.py  verification.py
examples/2d_heat/out_cpu/: 2d_heat_output_cpu.csv
examples/2d_heat/out_gpu/: 2d_heat_output.csv
grading_system/: abstract-grading-system  abstract-grading-system.cpp  pluggable_grading_policies  tempCodeRunnerFile.cpp
numerical_methods_basics/: 1d_finite_difference  1d_heat_equation  1d_heat_equation.cpp
src/1d_heat/: 1d_heat_equation.cpp
src/2d_heat/: 2d_heat.cpp  2d_heat.cu
src/numerical_methods_basics/: 1d_finite_difference.cpp
